--- a/extra/css/pages/home.css
+++ b/extra/css/pages/home.css
@@ -4,5 +4,5 @@
 
   @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .home-header {
-    padding-top: 0px;
+    padding-top: 4vh;
   }
